Wrap-Up - Issue with Post Content Fixed
Discovered that the post content overflows the div. Corrected this by targeting the div with a postBody class, and using the overflow-wrap property's break-word

--- a/wwwroot/css/Custom.css
+++ b/wwwroot/css/Custom.css
@@ -216,3 +216,7 @@ div.swal2-container.swal2.center.swal2-backdrop-show > div {
     background: #212121;
     border-radius: 10px;
 }
+
+.postBody {
+    overflow-wrap: break-word;
+}
